# hdf5-blosc2

./: CMakeLists.txt  README.md  README.rst  RELEASE_NOTES.txt  appveyor.yml
LICENSES/: BLOSC_HDF5.txt
data/: README.md  cyclic.cat  easy.cat  fetch_data_air.py  fetch_data_precip.py  fetch_data_snow.py  fetch_data_solar.py  fetch_data_wind.py
executables/: example.c  test_blosc2_filter_read.c
src/: blosc2_filter.c  blosc2_filter.h  blosc2_plugin.c  blosc2_plugin.h  example.c
